<?xml version="1.0"?>
<package>
  <name>coro_exekutor</name>
  <version>0.0.1</version>
  <description>The coro_exekutor package</description>

  <maintainer email="chitt@live.in">Chittaranjan S Srinivas</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>coro_roller_exekutor</build_depend>
  <build_depend>coro_tray_exekutor</build_depend>
  <build_depend>cam_interface</build_depend>
  <build_depend>load_map_exekutor</build_depend>
  <build_depend>miradock_exekutor</build_depend>
  <build_depend>move_to_exekutor</build_depend>
  <run_depend>coro_roller_exekutor</run_depend>
  <run_depend>coro_tray_exekutor</run_depend>
  <run_depend>load_map_exekutor</run_depend>
  <run_depend>miradock_exekutor</run_depend>
  <run_depend>cam_interface</run_depend>
  <run_depend>move_to_exekutor</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
